@@ -32,6 +32,7 @@ try:
         error_message,
         file_date,
         latest_fastflix,
+        latest_ffmpeg,
         message,
         prevent_sleep_mode,
     )
@@ -261,7 +262,7 @@ def required_info(logger, data_path, log_dir):
             )
             if ret == qm.Yes:
                 try:
-                    windows_download_ffmpeg(ffmpeg_folder)
+                    latest_ffmpeg()
                 except Exception as err:
                     logger.exception("Could not download FFmpeg")
                     sys.exit(2)
@@ -329,34 +330,6 @@ def start_app(queue, status_queue, log_queue, data_path, log_dir):
         print(f"Unexpected error: {err}")
     else:
         logger.info("Fastflix shutting down")
-
-
-def windows_download_ffmpeg(ffmpeg_folder):
-    ffmpeg_folder.mkdir(exist_ok=True)
-    url = (
-        "https://github.com/BtbN/FFmpeg-Builds/releases/download/"
-        "autobuild-2020-10-05-12-30/ffmpeg-N-99471-g290de64759-win64-gpl.zip"
-    )
-    req = requests.get(url, stream=True)
-    filename = ffmpeg_folder / "ffmpeg-full.zip"
-    with open(filename, "wb") as f:
-        for i, block in enumerate(req.iter_content(chunk_size=1024)):
-            if i % 1000 == 0.0:
-                print(f"Downloaded {i // 1000}MB")
-            f.write(block)
-
-    reusables.extract(filename, path=ffmpeg_folder)
-    try:
-        Path(filename).unlink()
-    except OSError:
-        pass
-
-    sub_dir = next(Path(ffmpeg_folder).glob("ffmpeg-*"))
-
-    for item in os.listdir(sub_dir):
-        shutil.move(str(sub_dir / item), str(ffmpeg_folder))
-
-    shutil.rmtree(sub_dir, ignore_errors=True)
 
 
 if __name__ == "__main__":
