@@ -9,6 +9,7 @@
 * Adding confirm overwrite dialog if file already exists and is not empty
 * Adding linking to issues in changelog file
 * Changing to explicitly set no-slow-firstpass for x265 bitrate runs
+* Changing FFmpeg to download latest available
 * Fixing AVC always copied chapters
 * Fixing how aspect ratio interacted with crop
 * Fixing HEVC would copy HDR10 details on 8-bit videos
